[package]
name = "blockus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.3", features=["derive"]}
json = "0.12.4"
reqwest = {version="0.11.20", features = ["json"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tinyjson = "2.5.1"
tokio = {version = "1.32.0", features=["full"]}
